refactor for JSON styling, and cache wip